Adding low-level tests for figuring out fastest ways for parsing ints.